--- a/index.html
+++ b/index.html
@@ -18,23 +18,23 @@
                       IQ Тест
                     </h1>
                     <div class="header__wrap-image">
-                        <img src="images/brain192x192.png" alt="logo">
+                        <img class="header__logo" src="images/brain192x192.png" alt="logo">
                     </div>
                   </div>
-            </div>
-            <nav class="header__navigation">
-                <ul class="header__navigation-list">
-                  <li class="header__navigation-item">
-                    <a class="header__item _item-choice" href="#">Главная</a>
-                  </li>
-                  <li class="header__navigation-item">
-                    <a class="header__item" href="#">Информация о тесте</a>
-                  </li>
-                  <li class="header__navigation-item">
-                    <a class="header__item" href="#">пройти тест</a>
-                  </li>
-                </ul>
-              </nav>
+                  <nav class="header__navigation">
+                      <ul class="header__navigation-list">
+                          <li class="header__navigation-item">
+                              <a class="header__item _item-choice" href="#">Главная</a>
+                            </li>
+                            <li class="header__navigation-item">
+                                <a class="header__item" href="#">Информация о тесте</a>
+                            </li>
+                            <li class="header__navigation-item">
+                                <a class="header__item" href="#">пройти тест</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
         </header>
         <main class="main"></main>
         <footer class="footer"></footer>
