feat: add section_1 html elements

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="common/normal.css">
     <link rel="stylesheet" href="common/common.css">
     <link rel="stylesheet" href="header/header.css">
+    <link rel="stylesheet" href="section_1/section_1.css">
 </head>
 
 <body class="body" id="body">
@@ -16,9 +17,9 @@
         <header class="header">
             <div class="header__container _container">
                 <div class="header__subwrap-right">
-                    <h1 class="header__title">
+                    <h2 class="header__title">
                         IQ Тест
-                    </h1>
+                    </h2>
                     <div class="header__wrap-image">
                         <img class="header__logo" src="images/brain192x192.png" alt="logo">
                     </div>
@@ -43,7 +44,38 @@
                 </div>
             </div>
         </header>
-        <main class="main"></main>
+        <main class="main">
+            <section class="first-acquaintance">
+                <div class="first-acquaintance__wrap-info">
+                    <h1 class="first-acquaintance__title">
+                        тест на определение IQ
+                    </h1>
+                    <div class="first-acquaintance__wrap-logo">
+                        <img src="images/brain.png" alt="brain-logo">
+                    </div>
+                    <div class="first-acquaintance__wrap-btn">
+                        <a href="#">пРойти тест</a>
+                    </div>
+                    <div class="first-acquaintance__add-inf">
+                        <span class="mod-yellow">
+                            и получите рекомендации по развитию своего интеллекта
+                        </span>
+                        и улучшению финансового благосостояния и личной жизни
+                    </div>
+                    <div class="first-acquaintance__nav-btn">
+                        <div class="first-acquaintance__wrap-svg-icon">
+                            <img class="first-acquaintance__svg-icon" src="images/arrow-up.svg" alt="arrow-up">
+                        </div>
+                        <div class="first-acquaintance__text-svg-icon">
+                            подробнее
+                        </div>
+                    </div>
+                </div>
+                <div class="first-acquaintance__backgound-img">
+                    <img src="images/space.jpeg" alt="backgound-space">
+                </div>
+            </section>
+        </main>
         <footer class="footer"></footer>
         <div class="test">
             <button class="menu-burger" aria-label="Menu">
