feat: implement section-1

--- a/index.html
+++ b/index.html
@@ -54,13 +54,14 @@
                     <div class="first-acquaintance__wrap-logo">
                         <img class="first-acquaintance__img-logo" src="images/brain.png" alt="brain-logo">
                     </div>
-                    <div class="first-acquaintance__wrap-btn">
-                        <a href="#">пРойти тест</a>
+                    <div class="first-acquaintance__wrap-btn mod-btn-shape mod-yellow-btn">
+                        <a class="first-acquaintance__btn" href="#">пРойти тест</a>
                     </div>
                     <div class="first-acquaintance__add-inf">
-                        <span class="mod-yellow">
-                            и получите рекомендации по развитию своего интеллекта
+                        <span class="first-acquaintance__text mod-yellow-text">
+                            И получите рекомендации по развитию своего интеллекта
                         </span>
+                        <br>
                         и улучшению финансового благосостояния и личной жизни
                     </div>
                     <div class="first-acquaintance__nav-btn">
