feat: fix respnonsive section-1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="common/normal.css">
     <link rel="stylesheet" href="common/common.css">
     <link rel="stylesheet" href="header/header.css">
-    <link rel="stylesheet" href="section_1/section_1.css">
+    <link rel="stylesheet" href="section-1/section-1.css">
 </head>
 
 <body class="body" id="body">
@@ -47,15 +47,19 @@
         </header>
         <main class="main">
             <section class="first-acquaintance">
-                <div class="first-acquaintance__wrap-info">
-                    <h1 class="first-acquaintance__title">
-                        тест на определение IQ
-                    </h1>
+                <div class="first-acquaintance__wrap-info _container">
+                    <div class="first-acquaintance__subwrap-agenda">
+                        <div class="first-acquaintance__agenda">Пройдите точный и быстрый</div>
+                        <h1 class="first-acquaintance__title">
+                            тест на определение IQ
+                        </h1>
+                    </div>
                     <div class="first-acquaintance__wrap-logo">
                         <img class="first-acquaintance__img-logo" src="images/brain.png" alt="brain-logo">
+                        <img class="first-acquaintance__img-logo-320" src="images/brain192x192.png" alt="brain-logo">
                     </div>
-                    <div class="first-acquaintance__wrap-btn mod-btn-shape mod-yellow-btn">
-                        <a class="first-acquaintance__btn" href="#">пРойти тест</a>
+                    <div class="first-acquaintance__wrap-btn">
+                        <a class="first-acquaintance__btn mod-btn-shape mod-yellow-btn" href="#">пРойти тест</a>
                     </div>
                     <div class="first-acquaintance__add-inf">
                         <span class="first-acquaintance__text mod-yellow-text">
