feat: fix respnonsive section-1

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         и улучшению финансового благосостояния и личной жизни
                     </div>
                     <div class="first-acquaintance__nav-btn">
-                        <div class="first-acquaintance__wrap-svg-icon">
+                        <a href="#" class="first-acquaintance__wrap-svg-icon">
                             <img class="first-acquaintance__svg-icon" src="images/arrow-up.svg" alt="arrow-up">
-                        </div>
+                        </a>
                         <div class="first-acquaintance__text-svg-icon">
                             подробнее
                         </div>
