feat: implement section-2 responsive

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="common/common.css">
     <link rel="stylesheet" href="header/header.css">
     <link rel="stylesheet" href="section-1/section-1.css">
+    <link rel="stylesheet" href="section-2/section-2.css">
 </head>
 
 <body class="body" id="body">
@@ -79,6 +80,27 @@
                 </div>
                 <div class="first-acquaintance__backgound-img">
                     <img class="first-acquaintance__img-space" src="images/space.jpeg" alt="backgound-space">
+                </div>
+            </section>
+            <section class="test-opportunity">
+                <div class="test-opportunity__background">
+                    <div class="test-opportunity__back-layer"></div>
+                    <img class="test-opportunity__image-star" src="images/blueStar_1.jpg" alt="backgound-star">
+                </div>
+                <div class="test-opportunity__wrap-text _container">
+                    <div class="test-opportunity__wrap-quotes">
+                        <div class="test-opportunity__quotes1">
+                            <img class="test-opportunity__image-quote" src="images/“.png" alt="qoute">
+                        </div>
+                    </div>
+                        <div class="test-opportunity__text">
+                            Профессиональный IQ-тест позволяет не только определить коэффициент вашего интеллекта, но и выработать список рекомендаций для повышения этого показателя.
+                        </div>
+                        <div class="test-opportunity__wrap-quotes">
+                            <div class="test-opportunity__quotes2">
+                                <img class="test-opportunity__image-quote" src="images/“(1).png" alt="qoute">
+                            </div>
+                        </div>
                 </div>
             </section>
         </main>
