feat: implement section-3 responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="header/header.css">
     <link rel="stylesheet" href="section-1/section-1.css">
     <link rel="stylesheet" href="section-2/section-2.css">
+    <link rel="stylesheet" href="section-3/section-3.css">
 </head>
 
 <body class="body" id="body">
@@ -93,23 +94,33 @@
                             <img class="test-opportunity__image-quote" src="images/“.png" alt="qoute">
                         </div>
                     </div>
-                        <div class="test-opportunity__text">
-                            Профессиональный IQ-тест позволяет не только определить коэффициент вашего интеллекта, но и выработать список рекомендаций для повышения этого показателя.
+                    <div class="test-opportunity__text">
+                        Профессиональный IQ-тест позволяет не только определить коэффициент вашего интеллекта, но и
+                        выработать список рекомендаций для повышения этого показателя.
+                    </div>
+                    <div class="test-opportunity__wrap-quotes">
+                        <div class="test-opportunity__quotes2">
+                            <img class="test-opportunity__image-quote" src="images/“(1).png" alt="qoute">
                         </div>
-                        <div class="test-opportunity__wrap-quotes">
-                            <div class="test-opportunity__quotes2">
-                                <img class="test-opportunity__image-quote" src="images/“(1).png" alt="qoute">
-                            </div>
-                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="details _container">
+                <div class="details__text">
+                    Также по результатам теста
+                    <b class="mod-upper-case">вы получите</b> подробные <b class="mod-upper-case">советы</b> по определению наиболее перспективной <b class="mod-upper-case">для вашего типа</b>  <b>интеллекта</b> <b class="mod-upper-case">сферы
+                    деятельности</b>,
+                    которая принесет вам скорейший финансовый результат.
+                </div>
+                <div class="details__wrap-image">
+                    <img class="details__image" src="images/scheme.png" alt="scheme">
+                </div>
+                <div class="details__wrap-btn">
+                    <a class="details__btn mod-btn-shape mod-yellow-btn" href="#">пРойти тест</a>
                 </div>
             </section>
         </main>
         <footer class="footer"></footer>
-        <div class="test">
-            <button class="menu-burger" aria-label="Menu">
-                <span class="menu-burger__line"></span>
-            </button>
-        </div>
     </div>
 </body>
 <script>
@@ -117,4 +128,5 @@
     const defaultFont = window.getComputedStyle(element).getPropertyValue('font-family');
     console.log(defaultFont);
 </script>
+
 </html>
