feat: implement section-4 responsive

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="section-1/section-1.css">
     <link rel="stylesheet" href="section-2/section-2.css">
     <link rel="stylesheet" href="section-3/section-3.css">
+    <link rel="stylesheet" href="section-4/section-4.css">
 </head>
 
 <body class="body" id="body">
@@ -105,18 +106,49 @@
                     </div>
                 </div>
             </section>
-            <section class="details _container">
-                <div class="details__text">
-                    Также по результатам теста
-                    <b class="mod-upper-case">вы получите</b> подробные <b class="mod-upper-case">советы</b> по определению наиболее перспективной <b class="mod-upper-case">для вашего типа</b>  <b>интеллекта</b> <b class="mod-upper-case">сферы
-                    деятельности</b>,
-                    которая принесет вам скорейший финансовый результат.
+            <section class="details">
+                <div class="details__container _container">
+
+                    <div class="details__text">
+                        Также по результатам теста
+                        <b class="mod-upper-case">вы получите</b> подробные <b class="mod-upper-case">советы</b> по
+                        определению наиболее перспективной <b class="mod-upper-case">для вашего типа</b>
+                        <b>интеллекта</b> <b class="mod-upper-case">сферы
+                            деятельности</b>,
+                        которая принесет вам скорейший финансовый результат.
+                    </div>
+                    <div class="details__wrap-image">
+                        <img class="details__image" src="images/scheme.png" alt="scheme">
+                    </div>
+                    <div class="details__wrap-btn">
+                        <a class="details__btn mod-btn-shape mod-yellow-btn" href="#">пРойти тест</a>
+                    </div>
                 </div>
-                <div class="details__wrap-image">
-                    <img class="details__image" src="images/scheme.png" alt="scheme">
+            </section>
+            <section class="usability">
+                <div class="usability__background">
+                    <img class="usability__image-stars" src="images/space.jpeg" alt="backgound-star">
                 </div>
-                <div class="details__wrap-btn">
-                    <a class="details__btn mod-btn-shape mod-yellow-btn" href="#">пРойти тест</a>
+                <div class="usability__container _container">
+                    <div class="usability__text-1">
+                        Прохождение теста займет у вас не более <span class="mod-yellow-text">12 минут</span>, а его
+                        <b>результаты</b> вы сможете <span class="mod-yellow-text">использовать всю жизнь.</span>
+                    </div>
+                    <div class="usability__text-2">
+                        Профессиональная интерпретация и детально <b>проработанные рекомендации</b> позволят вам
+                        качественно <b>изменить все аспекты своей жизни:</b> от финансового до любовного.
+                    </div>
+                    <div class="usability__wrap-btn">
+                        <a class="usability__btn mod-btn-shape mod-transparent-btn" href="#">пРойти тест</a>
+                    </div>
+                    <div class="usability__year-wrap">
+                        <div class="usability__circle">
+                            <div>c</div>
+                        </div>
+                        <div class="usability__year">
+                            2019
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
