fix: fix footer implement overflow

--- a/index.html
+++ b/index.html
@@ -140,40 +140,33 @@
                     </div>
                 </div>
             </section>
-            <section class="usability">
-                <div class="usability__background">
-                    <img class="usability__image-stars" src="images/space.jpeg" alt="backgound-star">
+            <footer class="footer">
+                <div class="footer__background">
+                    <img class="footer__image-stars" src="images/space.jpeg" alt="backgound-star">
                 </div>
-                <div class="usability__container _container">
-                    <div class="usability__text-1">
+                <div class="footer__container _container">
+                    <div class="footer__text-1">
                         Прохождение теста займет у вас не более <span class="mod-yellow-text">12 минут</span>, а его
                         <b>результаты</b> вы сможете <span class="mod-yellow-text">использовать всю жизнь.</span>
                     </div>
-                    <div class="usability__text-2">
+                    <div class="footer__text-2">
                         Профессиональная интерпретация и детально <b>проработанные рекомендации</b> позволят вам
                         качественно <b>изменить все аспекты своей жизни:</b> от финансового до любовного.
                     </div>
-                    <div class="usability__wrap-btn">
-                        <a class="usability__btn mod-btn-shape mod-transparent-btn" href="#">пРойти тест</a>
+                    <div class="footer__wrap-btn">
+                        <a class="footer__btn mod-btn-shape mod-transparent-btn" href="#">пРойти тест</a>
                     </div>
-                    <div class="usability__year-wrap">
-                        <div class="usability__circle">
+                    <div class="footer__year-wrap">
+                        <div class="footer__circle">
                             <div>c</div>
                         </div>
-                        <div class="usability__year">
+                        <div class="footer__year">
                             2019
                         </div>
                     </div>
                 </div>
-            </section>
+            </footer>
         </main>
-        <footer class="footer"></footer>
     </div>
 </body>
-<script>
-    const element = document.querySelector('div');
-    const defaultFont = window.getComputedStyle(element).getPropertyValue('font-family');
-    console.log(defaultFont);
-</script>
-
 </html>
