--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <link rel="stylesheet" href="section-1/section-1.css">
     <link rel="stylesheet" href="section-2/section-2.css">
     <link rel="stylesheet" href="section-3/section-3.css">
-    <link rel="stylesheet" href="section-4/section-4.css">
+    <link rel="stylesheet" href="footer/footer.css">
+    <link rel="stylesheet" href="test/test.css">
     <script src="header/header.js" defer></script>
+    <script src="test/test.js" defer></script>
+
 </head>
 
 <body class="body" id="body">
-    <div class="wrap">
+    <div class="wrap" id="wrap">
         <header class="header" id="header">
             <div class="header__container _container">
                 <div class="header__subwrap-right" id="logo">
@@ -38,7 +41,7 @@
                             <a class="header__item" href="#">Информация о тесте</a>
                         </li>
                         <li class="header__navigation-item">
-                            <a class="header__item" href="#">пройти тест</a>
+                            <a class="header__item" id="test1" href="#">пройти тест</a>
                         </li>
                     </ul>
                 </nav>
@@ -53,13 +56,13 @@
             <nav class="burger__navigation" id="burgerNav">
                 <ul class="burger__navigation-list">
                     <li class="burger__navigation-item">
-                        <a class="burger__item " href="#">Главная</a>
+                        <a class="burger__item" id="mainPage" href="#">Главная</a>
                     </li>
                     <li class="burger__navigation-item">
                         <a class="burger__item" href="#">Информация о тесте</a>
                     </li>
                     <li class="burger__navigation-item">
-                        <a class="burger__item mod-choice" href="#">пройти тест</a>
+                        <a class="burger__item mod-choice" id="test2" href="#">пройти тест</a>
                     </li>
                 </ul>
             </nav>
@@ -78,7 +81,7 @@
                         <img class="first-acquaintance__img-logo-320" src="images/brain192x192.png" alt="brain-logo">
                     </div>
                     <div class="first-acquaintance__wrap-btn">
-                        <a class="first-acquaintance__btn mod-btn-shape mod-yellow-btn" href="#">пРойти тест</a>
+                        <a class="first-acquaintance__btn mod-btn-shape mod-yellow-btn" id="test3" href="#">пРойти тест</a>
                     </div>
                     <div class="first-acquaintance__add-inf">
                         <span class="first-acquaintance__text mod-yellow-text">
@@ -136,7 +139,7 @@
                         <img class="details__image" src="images/scheme.png" alt="scheme">
                     </div>
                     <div class="details__wrap-btn">
-                        <a class="details__btn mod-btn-shape mod-yellow-btn" href="#">пРойти тест</a>
+                        <a class="details__btn mod-btn-shape mod-yellow-btn" id="test4" href="#">пРойти тест</a>
                     </div>
                 </div>
             </section>
@@ -154,7 +157,7 @@
                         качественно <b>изменить все аспекты своей жизни:</b> от финансового до любовного.
                     </div>
                     <div class="footer__wrap-btn">
-                        <a class="footer__btn mod-btn-shape mod-transparent-btn" href="#">пРойти тест</a>
+                        <a class="footer__btn mod-btn-shape mod-transparent-btn" id="test5" href="#">пройти тест</a>
                     </div>
                     <div class="footer__year-wrap">
                         <div class="footer__circle">
@@ -168,5 +171,50 @@
             </footer>
         </main>
     </div>
+    <!-- <div class="wrap-test" id="bodyTest">
+        <header class="header-test">
+            <div class="header-test__wrap-burger burger">
+                <div class="burger__line"></div>
+                <div class="burger__line"></div>
+                <div class="burger__line"></div>
+            </div>
+            <div class="header-test__subwrap">
+                <div class="header-test__wrap-logo">
+                    <img class="header-test__logo" src="images/brain48*47.png" alt="brain">
+                </div>
+                <div class="header-test__subscribtion">
+                    тест на определение IQ
+                </div>
+            </div>
+        </header>
+        <main class="main-test">
+            <section class="line">
+                <div class="line__main-line">
+                    <div class="line__progress-line"></div>
+                </div>
+            </section>
+            <section class="work-zone">
+                <fieldset class="work-zone__field">
+                    <div class="work-zone__question" id="question"></div>
+                    <div class="work-zone__options">
+                        <div class="work-zone__optIon">
+                            <input class="work-zone__input" type="radio" id="" name="" value=""/>
+                            <label class="work-zone__subscribtion" for=""></label>
+                          </div>
+                          <div class="work-zone__optIon">
+                            <input class="work-zone__input" type="radio" id="" name="" value=""/>
+                            <label class="work-zone__subscribtion" for=""></label>
+                          </div>
+                    </div>
+                </fieldset>
+
+            </section>
+        </main>
+        <footer class="footer-test">
+            <div class="footer-test__wrap-btn">
+                <button class="footer-test__btn mod-btn-shape mod-grey-btn" id="nextBtn">далее</button>
+            </div>
+        </footer>
+    </div> -->
 </body>
 </html>
