feat: implement switch mainPage - testPage

--- a/index.html
+++ b/index.html
@@ -171,6 +171,13 @@
             </footer>
         </main>
     </div>
+
+
+
+    <!-- --------------------------------------------------- test --------------------------------------------- -->
+
+
+
     <!-- <div class="wrap-test" id="bodyTest">
         <header class="header-test">
             <div class="header-test__wrap-burger burger">
