--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                         </li>
                     </ul>
                 </nav>
-                <div class="header__wrap-burger" id="burger">
-                    <div class="header__burger burger">
+                <div class="header__wrap-burger" id="burger" >
+                    <div class="header__burger burger" id="burger_1">
                         <div class="burger__line" id="line1"></div>
                         <div class="burger__line" id="line2"></div>
                         <div class="burger__line" id="line3"></div>
@@ -59,7 +59,7 @@
                         <a class="burger__item" id="mainPage" href="#">Главная</a>
                     </li>
                     <li class="burger__navigation-item">
-                        <a class="burger__item" href="#">Информация о тесте</a>
+                        <a class="burger__item" href="#opportunity" id="toInfoTest">Информация о тесте</a>
                     </li>
                     <li class="burger__navigation-item">
                         <a class="burger__item mod-choice" id="test2" href="#">пройти тест</a>
@@ -103,7 +103,7 @@
                     <img class="first-acquaintance__img-space" src="images/space.jpeg" alt="backgound-space">
                 </div>
             </section>
-            <section class="test-opportunity">
+            <section class="test-opportunity" id="opportunity">
                 <div class="test-opportunity__background">
                     <div class="test-opportunity__back-layer"></div>
                     <img class="test-opportunity__image-star" src="images/blueStar_1.jpg" alt="backgound-star">
@@ -178,21 +178,33 @@
 
 
 
-    <!-- <div class="wrap-test" id="bodyTest">
-        <header class="header-test">
-            <div class="header-test__wrap-burger burger">
-                <div class="burger__line"></div>
-                <div class="burger__line"></div>
-                <div class="burger__line"></div>
-            </div>
-            <div class="header-test__subwrap">
-                <div class="header-test__wrap-logo">
-                    <img class="header-test__logo" src="images/brain48*47.png" alt="brain">
+    <!-- <div class="wrap" id="wrapTest">
+        <header class="header" id="headerTest">
+            <div class="header__container _container">
+                <div class="header__wrap-burger burger" id="burgerTest">
+                    <div class="burger__line" id="line1Test"></div>
+                    <div class="burger__line" id="line2Test"></div>
+                    <div class="burger__line" id="line3Test"></div>
                 </div>
-                <div class="header-test__subscribtion">
-                    тест на определение IQ
+                <div class="header-test__subwrap" id="logoTest">
+                    <div class="header-test__wrap-logo">
+                        <img class="header-test__logo" src="images/brain48*47.png" alt="brain">
+                    </div>
+                    <div class="header-test__subscribtion">
+                        тест на определение IQ
+                    </div>
                 </div>
             </div>
+            <nav class="burger__navigation" id="burgerNavTest">
+                <ul class="burger__navigation-list">
+                    <li class="burger__navigation-item">
+                        <a class="burger__item" id="mainPageTest" href="wrap">Главная</a>
+                    </li>
+                    <li class="burger__navigation-item">
+                        <a class="burger__item mod-choice" id="test2_test" href="#">пройти тест</a>
+                    </li>
+                </ul>
+            </nav>
         </header>
         <main class="main-test">
             <section class="line">
@@ -223,5 +235,6 @@
             </div>
         </footer>
     </div> -->
+
 </body>
 </html>
