feat: implement progress line

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
             <nav class="burger__navigation" id="burgerNav">
                 <ul class="burger__navigation-list">
                     <li class="burger__navigation-item">
-                        <a class="burger__item" id="mainPage" href="#">Главная</a>
+                        <a class="burger__item mod-choice" id="mainPage" href="#">Главная</a>
                     </li>
                     <li class="burger__navigation-item">
                         <a class="burger__item" href="#opportunity" id="toInfoTest">Информация о тесте</a>
                     </li>
                     <li class="burger__navigation-item">
-                        <a class="burger__item mod-choice" id="test2" href="#">пройти тест</a>
+                        <a class="burger__item" id="test2" href="#">пройти тест</a>
                     </li>
                 </ul>
             </nav>
@@ -198,7 +198,10 @@
             <nav class="burger__navigation" id="burgerNavTest">
                 <ul class="burger__navigation-list">
                     <li class="burger__navigation-item">
-                        <a class="burger__item" id="mainPageTest" href="wrap">Главная</a>
+                        <a class="burger__item" id="mainPageTest" href="#">Главная</a>
+                    </li>
+                    <li class="burger__navigation-item">
+                        <a class="burger__item"  href="#">Информация о тесте</a>
                     </li>
                     <li class="burger__navigation-item">
                         <a class="burger__item mod-choice" id="test2_test" href="#">пройти тест</a>
@@ -209,7 +212,7 @@
         <main class="main-test">
             <section class="line">
                 <div class="line__main-line">
-                    <div class="line__progress-line"></div>
+                    <div class="line__progress-line" id="progressLine"></div>
                 </div>
             </section>
             <section class="work-zone">
@@ -226,7 +229,6 @@
                           </div>
                     </div>
                 </fieldset>
-
             </section>
         </main>
         <footer class="footer-test">
