feat: implent refresh question block

--- a/index.html
+++ b/index.html
@@ -218,15 +218,7 @@
             <section class="work-zone">
                 <fieldset class="work-zone__field">
                     <div class="work-zone__question" id="question"></div>
-                    <div class="work-zone__options">
-                        <div class="work-zone__optIon">
-                            <input class="work-zone__input" type="radio" id="" name="" value=""/>
-                            <label class="work-zone__subscribtion" for=""></label>
-                          </div>
-                          <div class="work-zone__optIon">
-                            <input class="work-zone__input" type="radio" id="" name="" value=""/>
-                            <label class="work-zone__subscribtion" for=""></label>
-                          </div>
+                    <div class="work-zone__options" id="optionsField">
                     </div>
                 </fieldset>
             </section>
