feat: implement square question

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 </div>
             </section>
             <section class="work-zone">
-                <fieldset class="work-zone__field">
+                <fieldset class="work-zone__field" id="fieldset">
                     <div class="work-zone__question" id="question"></div>
                     <div class="work-zone__options" id="optionsField">
                     </div>
