--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="footer/footer.css">
     <link rel="stylesheet" href="test/test.css">
     <script src="header/header.js" defer></script>
-    <script src="test/test.js" defer></script>
+    <!-- <script src="test/test.js" defer></script> -->
 
 </head>
 
@@ -171,7 +171,7 @@
             </footer>
         </main>
     </div>
-
+    <script src="test/test.js"></script>
 
 
     <!-- --------------------------------------------------- test --------------------------------------------- -->
